--- a/Lab2.Console/Lab2.Consoles.csproj
+++ b/Lab2.Console/Lab2.Consoles.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Lab2.DataAccess\Lab2.DataAccess.csproj" />
   </ItemGroup>
 
